@@ -1,5 +1,6 @@
 0.46
     - s/_03/ on the version
+    - Avoid warnings from Moose 1.09 (Dave Rolsky)
 
 0.46_03
     - Internals change cleanups regarding weakening $entry->{data} with
